# fenics_fenicsx_deb_consistency_check

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_against_releases.yml  dolfin_dolfinx.yml  pypi.yml  release.yml
applications/python3-dolfin/patches/: patch_dolfin_init.patch
applications/python3-dolfin/tests/unit/: test_pusimp.py
applications/python3-dolfinx/tests/unit/: test_pusimp.py
prevent_user_site_imports/: __init__.py  check.py  utils.py
proposal/: _deb_consistency_check.py  patch_dolfin_init.patch  patch_dolfinx_init.patch
pusimp/: __init__.py  prevent_user_site_imports.py  utils.py
python3-dolfin/patches/: _deb_consistency_check.py  patch_dolfin_init.patch
python3-dolfin/tests/deb_consistency_check/: conftest.py  test_conftest.py  test_dolfin_patches.py  test_patches.py  test_utils.py  utils.py  virtualenv_class.py
python3-dolfin/tests/unit/: test_prevent_user_site_imports.py
python3-dolfinx/patches/: _deb_consistency_check.py  patch_dolfinx_init.patch
python3-dolfinx/tests/deb_consistency_check/: test_conftest.py  test_dolfinx_patches.py  test_patches.py  test_utils.py  utils.py
python3-dolfinx/tests/unit/: test_prevent_user_site_imports.py
tests/: conftest.py  requirements.txt  test_conftest.py  test_proposal.py  virtualenv_class.py
tests/data/: test_data.py
tests/data/pusimp_dependency_five/: pyproject.toml
tests/data/pusimp_dependency_five/pusimp_dependency_five/: __init__.py
tests/data/pusimp_dependency_four/: pyproject.toml
tests/data/pusimp_dependency_four/pusimp_dependency_four/: __init__.py
tests/data/pusimp_dependency_one/: pyproject.toml
tests/data/pusimp_dependency_one/pusimp_dependency_one/: __init__.py
tests/data/pusimp_dependency_six/: pyproject.toml
tests/data/pusimp_dependency_six/pusimp_dependency_six/: __init__.py
tests/data/pusimp_dependency_three/: pyproject.toml
tests/data/pusimp_dependency_three/pusimp_dependency_three/: __init__.py
tests/data/pusimp_dependency_two/: pyproject.toml
tests/data/pusimp_dependency_two/pusimp_dependency_two/: __init__.py
tests/data/pusimp_golden_source/: pyproject.toml
tests/data/pusimp_golden_source/pusimp_golden_source/: __init__.py
tests/data/pusimp_package_eight/: pyproject.toml
tests/data/pusimp_package_eight/pusimp_package_eight/: __init__.py
tests/data/pusimp_package_five/: pyproject.toml
tests/data/pusimp_package_five/pusimp_package_five/: __init__.py
tests/data/pusimp_package_four/: pyproject.toml
tests/data/pusimp_package_four/pusimp_package_four/: __init__.py
tests/data/pusimp_package_nine/: pyproject.toml
tests/data/pusimp_package_nine/pusimp_package_nine/: __init__.py
tests/data/pusimp_package_one/: pyproject.toml
tests/data/pusimp_package_one/pusimp_package_one/: __init__.py
tests/data/pusimp_package_seven/: pyproject.toml
tests/data/pusimp_package_seven/pusimp_package_seven/: __init__.py
tests/data/pusimp_package_six/: pyproject.toml
tests/data/pusimp_package_six/pusimp_package_six/: __init__.py
tests/data/pusimp_package_ten/: pyproject.toml
tests/data/pusimp_package_ten/pusimp_package_ten/: __init__.py
tests/data/pusimp_package_three/: pyproject.toml
tests/data/pusimp_package_three/pusimp_package_three/: __init__.py
tests/data/pusimp_package_two/: pyproject.toml
tests/data/pusimp_package_two/pusimp_package_two/: __init__.py
tests/unit/: test_data.py  test_readme.py  test_utils.py
